--- a/main.html
+++ b/main.html
@@ -167,7 +167,6 @@
         <p data-es="Bienvenidos a HGC Services Corp, su oficina de servicios administrativos en Florida."
            data-en="Welcome to HGC Services Corp, your administrative services office in Florida."></p>
       </div>
-      <img src="HGC Logo.png" alt="HGC Logo" style="opacity:0.08; width:100%; margin-top:30px;">
     </section>
 
     <!-- INFORMATIVE -->
@@ -233,3 +232,12 @@
   </script>
 </body>
 </html>
+
+<!-- Header logo (usa la versión optimizada y @2x para pantallas HiDPI) -->
+<img
+  src="assets/logo-hgc.png"
+  srcset="assets/logo-hgc@2x.png 2x"
+  alt="HGC Services Corp"
+  height="60"
+  style="max-height:60px; object-fit:contain; display:block; cursor:pointer;"
+  onclick="showPage('home')">
